--- a/config.json
+++ b/config.json
@@ -7,6 +7,9 @@
             "EthicStaffAssigned": "Sadeck YN2 (chair)",
             "comments": "This submission is AUTOMATED by Sadeck",
             "resubmissionDeadline": "30-11-2018"
+        },
+        "A2_1": {
+            "projectID": "1235582"
         }
     },
     "Thien_Thong": {
