02 new testcases added

--- a/config.json
+++ b/config.json
@@ -1,45 +1,1 @@
-{
-    "Sadeck_YN": {
-        "e39": {
-            "REBChair": "Sadeck YN2 (chair)",
-            "REBNonPrimaryMember": "David Thompson (reviewer)",
-            "REBPrimaryMember": "David Thompson (researcher 3)",
-            "EthicStaffAssigned": "Sadeck YN2 (chair)",
-            "comments": "This submission is AUTOMATED by Sadeck",
-            "resubmissionDeadline": "30-11-2018"
-        },
-        "A2_1": {
-            "projectID": "1235582"
-        }
-    },
-    "Thien_Thong": {
-        "e39": {
-            "REBChair": "David Thompson (chair)",
-            "REBNonPrimaryMember": "David Thompson (reviewer)",
-            "REBPrimaryMember": "David Thompson (researcher 3)",
-            "EthicStaffAssigned": "David Thompson (protocol officer)",
-            "comments": "This submission is AUTOMATED by Thien Thong",
-            "resubmissionDeadline": "30-11-2018"
-        }
-    },
-    "David_Thompson": {
-        "e39": {
-            "REBChair": "David Thompson (chair)",
-            "REBNonPrimaryMember": "David Thompson (researcher 3)",
-            "REBPrimaryMember": "David Thompson (researcher 3)",
-            "EthicStaffAssigned": "David Thompson (protocol officer)",
-            "comments": "This submission is AUTOMATED by David Thompson",
-            "resubmissionDeadline": "30-11-2018"
-        }
-    },
-    "LA_Hupe": {
-        "e39": {
-            "REBChair": "LA Hupe (Chair)",
-            "REBNonPrimaryMember": "LA Hupe (Chair)",
-            "REBPrimaryMember": "LA Hupe (Chair)",
-            "EthicStaffAssigned": "LA Hupe (Protocol Officer)",
-            "comments": "This submission is AUTOMATED by LA Hupe",
-            "resubmissionDeadline": "30-11-2018"
-        }
-    }
-}
+{"Sadeck_YN":{"e39":{"REBChair":"Sadeck YN2 (chair)","REBNonPrimaryMember":"David Thompson (reviewer)","REBPrimaryMember":"David Thompson (researcher 3)","EthicStaffAssigned":"Sadeck YN2 (chair)","comments":"This submission is AUTOMATED by Sadeck","resubmissionDeadline":"30-11-2018"},"A2_1":{"projectID":"S-11-17-540"},"A2_1_DRAFT":{"projectID":"holla"}},"Thien_Thong":{"e39":{"REBChair":"David Thompson (chair)","REBNonPrimaryMember":"David Thompson (reviewer)","REBPrimaryMember":"David Thompson (researcher 3)","EthicStaffAssigned":"David Thompson (protocol officer)","comments":"This submission is AUTOMATED by Thien Thong","resubmissionDeadline":"30-11-2018"}},"David_Thompson":{"e39":{"REBChair":"David Thompson (chair)","REBNonPrimaryMember":"David Thompson (researcher 3)","REBPrimaryMember":"David Thompson (researcher 3)","EthicStaffAssigned":"David Thompson (protocol officer)","comments":"This submission is AUTOMATED by David Thompson","resubmissionDeadline":"30-11-2018"}},"LA_Hupe":{"e39":{"REBChair":"LA Hupe (Chair)","REBNonPrimaryMember":"LA Hupe (Chair)","REBPrimaryMember":"LA Hupe (Chair)","EthicStaffAssigned":"LA Hupe (Protocol Officer)","comments":"This submission is AUTOMATED by LA Hupe","resubmissionDeadline":"30-11-2018"}}}
